Commit muy grande, con muchos cambios - se agrega inserts a la base de datos